--- a/src/styling/style.scss
+++ b/src/styling/style.scss
@@ -1,7 +1,6 @@
-// camelCase for functional classes e.g. .neonText .lowLight
-//hyphenate
-
 @import url("https://fonts.googleapis.com/css?family=Dancing+Script");
+@import './timer.scss';
+@import './utilities.scss';
 
 /* ======================================== */
 * {
@@ -47,35 +46,6 @@
   font-size: 2.3em;
 }
 
-/* timer.css */
-.timer__container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.number-block {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  margin: 10px;
-  font-size: 1.5em;
-}
-
-.number {
-  width: 80px;
-  visibility: visible;
-  font-size: 3em;
-}
-.colon {
-  visibility: visible;
-  font-size: 3em;
-}
-
-.timer-label {
-  visibility: visible;
-  margin-top: -10px;
-  font-size: 0.6em;
-}
 button {
   width: 300px;
   padding: 10px;
@@ -94,19 +64,4 @@ button {
 .button-text {
   font-size: 3em;
   color: white;
-}
-
-.neonLight {
-  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
-    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
-}
-.noLight {
-  // color: #dfe;
-  text-shadow: none;
-}
-.lowLight {
-  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa;
-}
-.hidden {
-  visibility: hidden;
 }
